@@ -196,7 +196,7 @@ namespace CBinding
 			foreach (SolutionItem c in project.ParentFolder.Items) {
 				if (c is CProject) {
 					CProject cproj = (CProject)c;
-					CProjectConfiguration conf = (CProjectConfiguration)cproj.GetConfiguration (IdeApp.Workspace.ActiveConfiguration);
+					CProjectConfiguration conf = (CProjectConfiguration)cproj.GetActiveConfiguration (IdeApp.Workspace.ActiveConfiguration);
 					if (conf.CompileTarget != CBinding.CompileTarget.Bin) {
 						cproj.WriteMDPkgPackage (conf.Id);
 						package = new Package (cproj);
